--- a/Pages/About.html
+++ b/Pages/About.html
@@ -34,7 +34,8 @@
       <hr>
       <h1>"I can either watch it happen or be part of it." -Elon Musk</h1>
       <br>
-      <h3>
+      <h3> <!- What is this supposed to be? ->
+        
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque et scelerisque leo. Aliquam non venenatis tellus, non volutpat tortor. Maecenas ac ligula varius, faucibus nisl in, lobortis nibh. Vivamus eu dictum tellus. Curabitur consectetur turpis et nisi vehicula hendrerit. Duis vitae purus malesuada, mattis erat a, blandit dolor. Vestibulum suscipit sapien vitae enim laoreet aliquam. Integer vel ornare lectus. Praesent ac molestie purus, vel feugiat nisl. Duis semper porta nibh a lacinia. Donec interdum odio nec dolor imperdiet placerat. Sed sollicitudin laoreet risus, eu euismod tellus lacinia vitae. Nunc ut gravida risus. Nam et mattis lorem.
 
         Aliquam diam diam, cursus sit amet lobortis vitae, mattis nec arcu. Sed rhoncus mi ut tortor mattis, vel volutpat nunc accumsan. Aliquam viverra mattis nisi. Nullam ac lorem ultricies, viverra leo eget, mollis dui. Vivamus aliquam, quam at fermentum commodo, ligula quam bibendum nisi, non ullamcorper arcu felis id libero. Nam quis sapien odio. Cras semper quis dolor quis ultrices. Ut suscipit felis a ante bibendum, non semper nisi congue. Quisque finibus velit in erat ullamcorper lacinia. Morbi id quam malesuada, posuere sem ut, gravida diam. Praesent ac auctor nulla, a maximus ex. Curabitur sit amet ipsum erat. Duis elementum posuere nisi fringilla porta.
