--- a/Pages/Calendar.html
+++ b/Pages/Calendar.html
@@ -31,7 +31,7 @@
   </header>
 
 
-  <iframe src="https://calendar.google.com/calendar/embed?src=ltu8d7f935af1lrtl4bbpfki98%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width=99% height="20px" frameborder="0" scrolling="no">
+  <iframe src="https://calendar.google.com/calendar/embed?src=ltu8d7f935af1lrtl4bbpfki98%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no">
 
   </iframe>
 
