--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container" >
         <a href="index.html">
-        <img src="images/nexgenLogo.jpg" alt="NexGen Logo" class="navlogo" >
+        <img src="images/nexgenLogo1.jpg" alt="NexGen Logo" class="navlogo" >
         </a>
         <nav>
 		    <div ALIGN="center" >
@@ -30,10 +30,10 @@
       </div>
     </header>
 
-   
- 
+
+
     <div class="top">
-   
+
 
         <iframe width="100%" height="700" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media" ></iframe>
 
@@ -59,4 +59,3 @@
     </div>
   </body>
 </html>
-
