--- a/Pages/Calendar.html
+++ b/Pages/Calendar.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <title>NexGenRobotics Calender</title>
-    <link rel="stylesheet" type="text/css" href="../index.css">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  </head>
+ 	  <link rel="shortcut icon" type="images/png" href="../images/logo_1.png">
+      <title>NexGenRobotics</title>
+      <link rel="stylesheet" type="text/css" href="../index.css">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    </head>
+  <body>
 
   <header>
-      <div class="container" >
-          <a href="index.html">
-              <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="navlogo" >
-          </a>
-          <nav>
-              <div ALIGN="center" >
-                  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+      <div class="container">
 
-                  <ul class="text">
-                      <li><a href="">Home</a></li>
-                      <li><a href="OurTeam.html">Our Team</a></li>
-                      <li><a href="About.html">About</a></li>
-                      <li><a href="News.html">News</a></li>
-                      <li><a href="Sponsors.html">Sponsors </a></li>
-                      <li><a href="Calendar.html">Calendar</a></li>
-                      <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
-                  </ul>
-              </div>
-          </nav>
+        <a href="index.html">
+
+          <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
+
+        </a>
+
+        <nav>
+          <ul>
+            <li><a href="./OurTeam.html">Our Team</a></li>
+            <li><a href="./About.html">About</a></li>
+            <li><a href="#">Sponsers</a></li>
+            <li><a href="./Calendar.html">Calender</a></li>
+            <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
+          </ul>
+        </nav>
+
       </div>
   </header>
 
 
-  <iframe src="https://calendar.google.com/calendar/embed?src=ltu8d7f935af1lrtl4bbpfki98%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no">
-
+  <iframe
+    src="https://calendar.google.com/calendar/embed?src=ltu8d7f935af1lrtl4bbpfki98%40group.calendar.google.com&ctz=America%2FLos_Angeles"
+    style="border: 0"
+    width=100%
+    height=690px
+    frameborder="0"
+    scrolling="no">
   </iframe>
 
 </html>
