--- a/Pages/OurTeam.html
+++ b/Pages/OurTeam.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <title>NexGenRobotics Team</title>
-    <link rel="stylesheet" type="text/css" href="../index.css">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  </head>
+ 	  <link rel="shortcut icon" type="images/png" href="../images/logo_1.png">
+      <title>NexGenRobotics</title>
+      <link rel="stylesheet" type="text/css" href="../index.css">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    </head>
   <body>
-    <header>
-      <div class="container" >
+
+  <header>
+      <div class="container">
+
+        <a href="index.html">
+
+          <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
+
+        </a>
+
         <nav>
-          <div ALIGN="center" >
-            <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-
-            <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="navlogo" >
-
-            <ul class="text">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="../Pages/OurTeam.html">Our Team</a></li>
-              <li><a href="../Pages/About.html">About</a></li>
-              <li><a href="../Pages/News.html">News</a></li>
-              <li><a href="../Pages/Sponsors.html">Sponsors </a></li>
-              <li><a href="../Pages/Calendar.html">Calendar</a></li>
-              <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
-            </ul>
-          </div>
+          <ul>
+            <li><a href="./OurTeam.html">Our Team</a></li>
+            <li><a href="./About.html">About</a></li>
+            <li><a href="#">Sponsers</a></li>
+            <li><a href="./Calendar.html">Calender</a></li>
+            <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
+          </ul>
         </nav>
+
       </div>
-    </header>
+  </header>
 
     <div class="top">
-     
+
     <IMG SRC="../images/OurTeam.jpg">
 
 
