--- a/index.html
+++ b/index.html
@@ -2,33 +2,34 @@
 <html>
 
   <head>
- 	<link rel="shortcut icon" type="images/png" href="images/logo_1.png">
+ 	  <link rel="shortcut icon" type="images/png" href="images/logo_1.png">
       <title>NexGenRobotics</title>
       <link rel="stylesheet" type="text/css" href="index.css">
-  </head>
+      <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    </head>
   <body>
-  <header>
-    <div class="container" >
-        <a href="index.html">
-        <img src="images/nexgenLogo1.jpg" alt="NexGen Logo" class="navlogo" >
-        </a>
-        <nav>
-		    <div ALIGN="center" >
-                <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
-                <ul class="text">
-                    <li><a href="">Home</a></li>
-                    <li><a href="../Robotics-Website/Pages/OurTeam.html">Our Team</a></li>
-                    <li><a href="../Robotics-Website/Pages/About.html">About</a></li>
-                    <li><a href="../Robotics-Website/Pages/News.html">News</a></li>
-                    <li><a href="../Robotics-Website/Pages/Sponsors.html">Sponsors </a></li>
-                    <li><a href="../Robotics-Website/Pages/Calendar.html">Calendar</a></li>
-                    <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
-                </ul>
-            </div>
+  <header>
+      <div class="container">
+
+        <a href="index.html">
+
+          <img src="images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
+
+        </a>
+
+        <nav>
+          <ul>
+            <li><a href="./Pages/OurTeam.html">Our Team</a></li>
+            <li><a href="./Pages/About.html">About</a></li>
+            <li><a href="#">Sponsers</a></li>
+            <li><a href="./Pages/Calendar.html">Calender</a></li>
+            <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
+          </ul>
         </nav>
+
       </div>
-    </header>
+  </header>
 
 
 
