--- a/Pages/News.html
+++ b/Pages/News.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>NexGenRobotics News</title>
-    <link rel="stylesheet" type="text/css" href="../index.css">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <div class="container" >
-            <nav>
-                <div ALIGN="center" >
-                    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-                    <a href="../index.html">
-                    <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="navlogo" >
-                    </a>
-                    <ul class="text">
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../Pages/OurTeam.html">Our Team</a></li>
-                        <li><a href="../Pages/About.html">About</a></li>
-                        <li><a href="../Pages/News.html">News</a></li>
-                        <li><a href="../Pages/Sponsors.html">Sponsors </a></li>
-                        <li><a href="../Pages/Calendar.html">Calendar</a></li>
-                        <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
-                    </ul>
-                </div>
-            </nav>
 
-        </div>
+  <head>
+ 	  <link rel="shortcut icon" type="images/png" href="../images/logo_1.png">
+      <title>NexGenRobotics</title>
+      <link rel="stylesheet" type="text/css" href="../index.css">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    </head>
+  <body>
 
-</header>
+  <header>
+      <div class="container">
+
+        <a href="index.html">
+
+          <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
+
+        </a>
+
+        <nav>
+          <ul>
+            <li><a href="./OurTeam.html">Our Team</a></li>
+            <li><a href="./About.html">About</a></li>
+            <li><a href="#">Sponsers</a></li>
+            <li><a href="./Calendar.html">Calender</a></li>
+            <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
+          </ul>
+        </nav>
+
+      </div>
+  </header>
+
     <div class="container">
         <br><br><br>
         <h1>The Robot So Far</h1>
