--- a/Pages/Calendar.html
+++ b/Pages/Calendar.html
@@ -12,7 +12,7 @@
   <header>
       <div class="container">
 
-        <a href="index.html">
+        <a href="../index.html">
 
           <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
 
