Github Pages to GSuite verification

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
   <head>
  	  <link rel="shortcut icon" type="images/png" href="images/logo_1.png">
-      <title>NexGenRobotics</title>
-      <link rel="stylesheet" type="text/css" href="index.css">
-      <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    </head>
+    <title>NexGenRobotics</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" />
+  </head>
   <body>
 
   <header>
