--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>NexGenRobotics</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    
+    //GSuite Verification. DO NOT DELETE!!!
     <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" />
   </head>
   <body>
