--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
- 	  <link rel="shortcut icon" type="images/png" href="images/logo_1.png">
-    <title>NexGenRobotics</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    
-    //GSuite Verification. DO NOT DELETE!!!
-    <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" />
-  </head>
-  <body>
+<head>
+  <link rel="shortcut icon" type="images/png" href="images/logo_1.png">
+  <title>NexGenRobotics</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"> //GSuite Verification. DO NOT DELETE!!!
+  <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" />
+</head>
+
+<body>
 
   <header>
-      <div class="container">
+    <div class="container">
 
-        <a href="index.html">
+      <a href="index.html">
 
           <img src="images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
 
         </a>
 
-        <nav>
-          <ul>
-            <li><a href="./Pages/OurTeam.html">Our Team</a></li>
-            <li><a href="./Pages/About.html">About</a></li>
-            <li><a href="#">Sponsers</a></li>
-            <li><a href="./Pages/Calendar.html">Calender</a></li>
-            <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
-          </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="./Pages/OurTeam.html">Our Team</a></li>
+          <li><a href="./Pages/About.html">About</a></li>
+          <li><a href="#">Sponsers</a></li>
+          <li><a href="./Pages/Calendar.html">Calender</a></li>
+          <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
+        </ul>
+      </nav>
 
-      </div>
+    </div>
   </header>
 
-    <div class="top">
+  <div class="top">
 
 
-        <iframe width="100%" height="700" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media" ></iframe>
+    <iframe width="100%" height="700" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media"></iframe>
 
 
-        <h1>"I can either watch it happen or be a part of it." -Elon Musk</h1>
-        <br>
-            <table border="0" style="text-align:justify" width="95%" align="center">
-                <tr>
-                    <td>
-                        <h3>
+    <h1>"I can either watch it happen or be a part of it." -Elon Musk</h1>
+    <br>
+    <table border="0" style="text-align:justify" width="95%" align="center">
+      <tr>
+        <td>
+          <h3>
 
                             We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics.
                             Students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the First Robotics Competition held at UC Davis at the end of the year.
@@ -54,10 +53,11 @@
                             NexGen will strive for success and NexGen will work to be the best of the Next Generation.
 
                         </h3>
-                    </td>
-                </tr>
-            </table>
+        </td>
+      </tr>
+    </table>
 
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
