--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <link rel="shortcut icon" type="images/png" href="images/logo_1.png">
   <title>NexGenRobotics</title>
   <link rel="stylesheet" type="text/css" href="index.css">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"> //GSuite Verification. DO NOT DELETE!!!
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <meta name="theme-color" content="#00f395">
+  
+  //GSuite Verification. DO NOT DELETE!!!
   <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" />
 </head>
 
