GSuite comment fix

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" type="text/css" href="index.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <meta name="theme-color" content="#00f395">
-  
-  //GSuite Verification. DO NOT DELETE!!!
+
+  <!-- GSuite Verification. DO NOT DELETE!!! -->
   <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" />
 </head>
 
