--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" type="images/png" href="images/logo_1.png">
+  <link rel="shortcut icon" type="images/png" href="images/logo_2.png">
   <title>NexGenRobotics</title>
   <link rel="stylesheet" type="text/css" href="index.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
@@ -38,24 +38,20 @@
 
   <div class="top">
 
-
     <iframe width="100%" height="700" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media"></iframe>
-
 
     <h1>"I can either watch it happen or be a part of it." -Elon Musk</h1>
     <br>
     <table border="0" style="text-align:justify" width="95%" align="center">
       <tr>
         <td>
-          <h3>
-
-                            We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics.
-                            Students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the First Robotics Competition held at UC Davis at the end of the year.
-                            Through our club, students are also introduced to possible career choices in STEM, such as computer science and engineering.
-                            We will work our absolute best to am climb the ranks in the UC Davis competition and competitions in the future.
-                            NexGen will strive for success and NexGen will work to be the best of the Next Generation.
-
-                        </h3>
+          <h3>        
+            We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics.
+            students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the First Robotics Competition held at UC Davis at the end of the year.
+            Through our club, students are also introduced to possible career choices in STEM, such as computer science and engineering.
+            We will work our absolute best to am climb the ranks in the UC Davis competition and competitions in the future.
+            NexGen will strive for success and NexGen will work to be the best of the Next Generation.
+          </h3>
         </td>
       </tr>
     </table>
