Reformat and fix

--- a/Pages/Donate.html
+++ b/Pages/Donate.html
@@ -1,22 +1,25 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>NexGenRobotics</title>
-    <link rel="stylesheet" type="text/css" href="../index.css">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <div class="container">
 
-        <a href="../index.html">
+<head>
+  <meta charset="utf-8">
+  <title>NexGenRobotics</title>
+  <link rel="stylesheet" type="text/css" href="../index.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="container">
+
+      <a href="../index.html">
 
           <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
 
         </a>
 
-        <nav>
-		<div ALIGN="left">
+      <nav>
+        <div align="left">
           <ul>
             <li><a href="OurTeam.html">Our Team</a></li>
             <li><a href="About.html">About</a></li>
@@ -25,11 +28,12 @@
             <li><a href="">Donate</a></li>
           </ul>
         </div>
-        </nav>
+      </nav>
 
-      </div>
-    </header>
-	</body>
-	<body>
-<br><br><br><br><br><br>
-<A HREF="https://www.gofundme.com/nexgen-robotics"><IMG SRC="../images/GoFundMe.png" width="180" height="200" ></a>
+    </div>
+  </header>
+  <br><br><br><br><br><br>
+  <a href="https://www.gofundme.com/nexgen-robotics"><img src="../images/GoFundMe.png" width="180" height="200" ></a>
+</body>
+
+</html>
