--- a/Pages/OurTeam.html
+++ b/Pages/OurTeam.html
@@ -33,13 +33,11 @@
 
     <div class="top">
 
-    <IMG SRC="../images/OurTeam.jpg">
+    <img src="../images/OurTeam.jpg">
 
 
-
-
-<BR><BR><BR>
-<Table align="center" border="0" CELLpadding="1" Cellspacing="10" valign="bottom" width="80%">
+<br><br><br>
+<table align="center" border="0" cellpadding="1" cellspacing="10" valign="bottom" width="80%">
 
   <tr>
   <td>
