Reformatting even more files

--- a/Pages/News.html
+++ b/Pages/News.html
@@ -1,49 +1,35 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <link rel="shortcut icon" type="images/png" href="../images/logo_2.png">
-  <title>NexGenRobotics</title>
-  <link rel="stylesheet" type="text/css" href="../index.css">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link href="../images/logo_2.png" rel="shortcut icon" type="images/png">
+	<title>NexGenRobotics</title>
+	<link href="../index.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
-
 <body>
-
-  <header>
-    <div class="container">
-
-      <a href="../index.html">
-
-          <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
-
-        </a>
-
+	<header>
+		<div class="container">
+			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo.jpg"></a>
       <nav>
         <ul>
-          <li><a href="./OurTeam.html">Our Team</a></li>
-          <li><a href="./About.html">About</a></li>
-          <li><a href="#">Sponsers</a></li>
-          <li><a href="./Calendar.html">Calender</a></li>
+          <li><a href="./Pages/OurTeam.html">Our Team</a></li>
+          <li><a href="./Pages/About.html">About</a></li>
+          <li><a href="./Pages/Sponsors.html">Sponsers</a></li>
+          <li><a href="./Pages/Calendar.html">Calender</a></li>
           <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
         </ul>
       </nav>
-
-    </div>
-  </header>
-
-  <div class="container">
-    <br><br><br>
-    <h1>The Robot So Far</h1>
-    <p>
-      Sample Sample Sample
-    </p>
-
-    <br><br>
-    <h1>Welcome to Our Site - mm/dd/yyyy</h1>
-    <p>
-      This was the day we released our site. We will also like to note that we ...
-    </p>
-  </div>
+		</div>
+	</header>
+	<div class="container">
+		<br>
+		<br>
+		<br>
+		<h1>The Robot So Far</h1>
+		<p>Sample Sample Sample</p><br>
+		<br>
+		<h1>Welcome to Our Site - mm/dd/yyyy</h1>
+		<p>This was the day we released our site. We will also like to note that we ...</p>
+	</div>
 </body>
 </html>
