--- a/Pages/Sponsors.html
+++ b/Pages/Sponsors.html
@@ -1,237 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="../images/logo_1.png" rel="shortcut icon" type="images/png">
-	<title>NexGenRobotics Sponsors</title>
+	<link href="../images/logo_2.png" rel="shortcut icon" type="images/png">
+	<title>NexGenRobotics</title>
+	<link href="../index.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 <body>
-	<link rel="stylesheet" type="text/css">
 	<header>
 		<div class="container">
-			<nav>
-				<div align="center">
-					<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"><img alt="NexGen Logo" class="navlogo" src="../images/nexgenLogo.jpg">
-					<ul class="text">
-						<li>
-							<a href="../index.html">Home</a>
-						</li>
-						<li>
-							<a href="../Pages/OurTeam.html">Our Team</a>
-						</li>
-						<li>
-							<a href="../Pages/About.html">About</a>
-						</li>
-						<li>
-							<a href="../Pages/News.html">News</a>
-						</li>
-						<li>
-							<a href="../Pages/Sponsors.html">Sponsors</a>
-						</li>
-						<li>
-							<a href="../Pages/Calendar.html">Calendar</a>
-						</li>
-						<li>
-							<a href="https://www.gofundme.com/nexgen-robotics">Donate</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
+			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo.jpg"></a>
+      <nav>
+        <ul>
+          <li><a href="./Pages/OurTeam.html">Our Team</a></li>
+          <li><a href="./Pages/About.html">About</a></li>
+          <li><a href="./Pages/Sponsors.html">Sponsers</a></li>
+          <li><a href="./Pages/Calendar.html">Calender</a></li>
+          <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
+        </ul>
+      </nav>
 		</div>
 	</header>
-	<link href="cin.css" rel="stylesheet" type="text/css"><br>
-	<br>
-	<br>
-	<table align="right" bgcolor="gray" border="0" width="100%">
-		<tr>
-			<td align="left" bgcolor="gray" valign="middle" width="80%"></td>
-			<td align="right" bgcolor="gray" valign="middle">
-				<!-- SEARCH DROPDOWN MENU -->
-				<div class="top-bar-explore row" id="nav-menu-search-dropdown" style="display:none;">
-					<div class="hide-for-large column small-12">
-						<div class="search-with-icon js-search-nav-contain-small mt20">
-							<input class="js-search-nav-bar-small search-full" placeholder="Search GoFundMe" type="search">
-							<ul class="search-drop js-search-nav-drop-small hide"></ul>
-						</div>
-					</div>
-					<div class="hide-for-large column small-12">
-						<div class="light-gray js-search-prompt mb10" style="display:none;">
-							<i aria-hidden="true" class="light-gray fa fa-info-circle"></i>&nbsp; Try searching for locations, campaign titles and names
-						</div>
-					</div>
-				</div><input id="_token" name="_token" type="hidden" value="1d8559b30676003109f201370930f778">
-				<div class="gfm-modal-unstyled-wrapper modal-donations" data-animation-in="modal-slide-in" data-animation-out="modal-slide-out" data-reveal="" id="view-donations-modal">
-					<div class="gfm-modal gfm-modal--unstyled">
-						<!--/.row-->
-						<div class="row js-donations-contain collapse">
-							<div class="supporter claim-your-share-panel" id="claim-your-share-donations">
-								<div data-gfm-analytics-viewid="claim_share_panel" id="claim-share-first">
-									<div class="avatar-contain claim-your-share-avatar"><img class="aggregate-referred-icon" src="file:///G:/edu/gbih/test/bih/test01/Pages/sponsers3_files/aggregate-referred-icon.png"></div>
-									<div class="supporter-info claim-your-share-prompt">
-										<div class="mb10">
-											Your share could be bringing in donations. Sign in to track your impact.
-										</div>
-										<div class="row-column">
-											<a class="small fb-share actionable-text comment-share text-fb-blue" id="claim-share-fb-login-donations"><i aria-hidden="true" class="fa fa-facebook-square fb-blue mr5"></i>&nbsp;&nbsp;&nbsp;Connect</a>
-											<div class="text-small mb10">
-												We will never post without your permission.
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="claim-your-share-second" data-gfm-analytics-viewid="claim_share_complete" id="claim-share-second">
-									<div style="align-items: center; display: flex">
-										<img class="thumbnail claim-your-share-thumb" src="file:///G:/edu/gbih/test/bih/test01/Pages/sponsers3_files/greencheck.png">
-										<div class="claim-your-share-success-text">
-											In the future, we'll let you know if your sharing brings in any donations.
-										</div>
-									</div>
-								</div>
-								<div class="claim-your-share-second" data-gfm-analytics-viewid="claim_share_complete" id="claim-share-error">
-									<div style="align-items: center; display: flex">
-										<img class="thumbnail claim-your-share-thumb" src="file:///G:/edu/gbih/test/bih/test01/Pages/sponsers3_files/ico-alert-sm@2x.png">
-										<div class="claim-your-share-success-text">
-											We weren't able to connect your Facebook account. Please try again later.
-										</div>
-									</div>
-								</div>
-							</div><!-- background-color: #e5e9da; -->S
-							<div class="column showcontrol-donations">
-								<div class="supporters-list">
-									<div class="supporter js-donation-content" data-id="211832354">
-										<a class="avatar-contain js-profile-avatar" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=f0r7B2oswS4rklJmPBxJI7iKdMZRcfi%2BIgFsqGgFIY4%3D">
-										<div class="avatar-no-pic media-round thumbnail">
-											JD
-										</div></a>
-										<div class="supporter-info">
-											<div class="row collapse">
-												<div class="column small-10 medium-11">
-													<div class="supporter-amount">
-														$100
-													</div><a class="supporter-name js-profile-donor" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=f0r7B2oswS4rklJmPBxJI7iKdMZRcfi%2BIgFsqGgFIY4%3D">Joshua Duong</a>
-													<div class="supporter-time">
-														3 days ago
-													</div>
-												</div>
-											</div>
-										</div><!--/.supporter-info-->
-									</div>
-									<div class="supporter js-donation-content" data-id="211679852">
-										<a class="avatar-contain js-profile-avatar" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=WkOLWtzfk%2BUBoZA%2B3aw28WNxQIauctDVHyAuZacS%2B1I%3D">
-										<div class="avatar-no-pic media-round thumbnail">
-											TM
-										</div></a>
-										<div class="supporter-info">
-											<div class="row collapse">
-												<div class="column small-10 medium-11">
-													<div class="supporter-amount">
-														$5
-													</div><a class="supporter-name js-profile-donor" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=WkOLWtzfk%2BUBoZA%2B3aw28WNxQIauctDVHyAuZacS%2B1I%3D">Tony Mendoza</a>
-													<div class="supporter-time">
-														3 days ago
-													</div>
-												</div>
-											</div>
-										</div><!--/.supporter-info-->
-									</div>
-									<div class="supporter js-donation-content" data-id="210361746">
-										<a class="avatar-contain js-profile-avatar" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=YJ9Jz3i93K7KmRfm6asnzGWLmjwTLLQXoSR6tgkEgB8%3D">
-										<div class="avatar-no-pic media-round thumbnail">
-											AM
-										</div></a>
-										<div class="supporter-info">
-											<div class="row collapse">
-												<div class="column small-10 medium-11">
-													<div class="supporter-amount">
-														$10
-													</div><a class="supporter-name js-profile-donor" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=YJ9Jz3i93K7KmRfm6asnzGWLmjwTLLQXoSR6tgkEgB8%3D">Angela Majka</a>
-													<div class="supporter-time">
-														8 days ago
-													</div>
-												</div>
-											</div>
-										</div><!--/.supporter-info-->
-									</div>
-									<div class="supporter js-donation-content" data-id="209854296">
-										<a class="avatar-contain js-profile-avatar" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=LGzz4l03wgKTEKU%2FrvtUflDYAFnZsXpNuS2ufYk2aC4%3D">
-										<div class="avatar-no-pic media-round thumbnail">
-											HK
-										</div></a>
-										<div class="supporter-info">
-											<div class="row collapse">
-												<div class="column small-10 medium-11">
-													<div class="supporter-amount">
-														$100
-													</div><a class="supporter-name js-profile-donor" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=LGzz4l03wgKTEKU%2FrvtUflDYAFnZsXpNuS2ufYk2aC4%3D">Hitesh Kapur</a>
-													<div class="supporter-time">
-														10 days ago
-													</div>
-												</div>
-											</div>
-										</div><!--/.supporter-info-->
-									</div>
-									<div class="supporter js-donation-content" data-id="209833888">
-										<a class="avatar-contain js-profile-avatar" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=tp6lIGfRiSXXVZtDZV6Ex0PaQHdRTykbNYCecPzpsco%3D"><img alt="" class="thumbnail media-round" src="file:///G:/edu/gbih/test/bih/test01/Pages/sponsers3_files/19424238_1729724383707684_7414912396543905836_n.jpg"></a>
-										<div class="supporter-info">
-											<div class="row collapse">
-												<div class="column small-10 medium-11">
-													<div class="supporter-amount">
-														$20
-													</div><a class="supporter-name js-profile-donor" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=tp6lIGfRiSXXVZtDZV6Ex0PaQHdRTykbNYCecPzpsco%3D">Jacob Davis</a>
-													<div class="supporter-time">
-														10 days ago
-													</div>
-												</div>
-											</div>
-										</div><!--/.supporter-info-->
-									</div>
-									<div class="supporter js-donation-content" data-id="209796120">
-										<a class="avatar-contain js-profile-avatar" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=ODiVqoAdGNPW6R%2Bt%2B8Jk5Q0ERrwR%2Bns4xKSE7%2Fv4unk%3D">
-										<div class="avatar-no-pic media-round thumbnail">
-											DL
-										</div></a>
-										<div class="supporter-info">
-											<div class="row collapse">
-												<div class="column small-10 medium-11">
-													<div class="supporter-amount">
-														$5
-													</div><a class="supporter-name js-profile-donor" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=ODiVqoAdGNPW6R%2Bt%2B8Jk5Q0ERrwR%2Bns4xKSE7%2Fv4unk%3D">Dexter Liu</a>
-													<div class="supporter-time">
-														11 days ago
-													</div>
-												</div>
-											</div>
-										</div><!--/.supporter-info-->
-									</div>
-									<div class="supporter js-donation-content" data-id="209243514">
-										<a class="avatar-contain js-profile-avatar" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=Kk%2F11WFe%2FpsjQKGEb9w5FbNZufYd5galWI2OYwDmnBE%3D">
-										<div class="avatar-no-pic media-round thumbnail">
-											RK
-										</div></a>
-										<div class="supporter-info">
-											<div class="row collapse">
-												<div class="column small-10 medium-11">
-													<div class="supporter-amount">
-														$5
-													</div><a class="supporter-name js-profile-donor" data-gfm-analytics-element="btn-donate-profiledonor" href="https://www.gofundme.com/mvc.php?route=person_profile/byDid&amp;d=Kk%2F11WFe%2FpsjQKGEb9w5FbNZufYd5galWI2OYwDmnBE%3D">Rohan Kapur</a>
-													<div class="supporter-time">
-														12 days ago
-													</div>
-												</div>
-											</div>
-										</div><!--/.supporter-info-->
-									</div>
-								</div>
-								<div class="donations-control-footer">
-									<div class="text-small row text-center mb">
-										Viewing <span class="js-donation-count">7</span> of 7 Donations
-									</div>
-								</div>
-							</div>
-						</div><!--/.row-->
-					</div>
-				</div>
-			</td>
-		</tr>
-	</table>
+	<div class="container">
+		<br>
+		<br>
+		<br>
+		<h1>Thank you to our sponsors!</h1>
+	</div>
 </body>
 </html>
