--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
           <li><a href="./Pages/OurTeam.html">Our Team</a></li>
           <li><a href="./Pages/About.html">About</a></li>
-          <li><a href="#">Sponsers</a></li>
+          <li><a href="./Pages/Sponsors.html">Sponsers</a></li>
           <li><a href="./Pages/Calendar.html">Calender</a></li>
           <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
         </ul>
