--- a/Pages/Donate.html
+++ b/Pages/Donate.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <title>NexGenRobotics</title>
-  <link rel="stylesheet" type="text/css" href="../index.css">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<meta charset="utf-8">
+	<title>NexGenRobotics</title>
+	<link href="../index.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
-
 <body>
-  <header>
-    <div class="container">
-
-      <a href="../index.html">
-
-          <img src="../images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
-
-        </a>
-
+	<header>
+		<div class="container">
+			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo.jpg"></a>
       <nav>
-        <div align="left">
-          <ul>
-            <li><a href="OurTeam.html">Our Team</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Sponsors.html">Sponsors</a></li>
-            <li><a href="Calendar.html">Calendar</a></li>
-            <li><a href="">Donate</a></li>
-          </ul>
-        </div>
+        <ul>
+          <li><a href="./Pages/OurTeam.html">Our Team</a></li>
+          <li><a href="./Pages/About.html">About</a></li>
+          <li><a href="./Pages/Sponsors.html">Sponsers</a></li>
+          <li><a href="./Pages/Calendar.html">Calender</a></li>
+          <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
+        </ul>
       </nav>
-
-    </div>
-  </header>
-  <br><br><br><br><br><br>
-  <a href="https://www.gofundme.com/nexgen-robotics"><img src="../images/GoFundMe.png" width="180" height="200" ></a>
+		</div>
+	</header><br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<a href="https://www.gofundme.com/nexgen-robotics"><img height="200" src="../images/GoFundMe.png" width="180"></a>
 </body>
-
 </html>
