--- a/Pages/Donate.html
+++ b/Pages/Donate.html
@@ -12,10 +12,10 @@
 			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo.jpg"></a>
       <nav>
         <ul>
-          <li><a href="./Pages/OurTeam.html">Our Team</a></li>
-          <li><a href="./Pages/About.html">About</a></li>
-          <li><a href="./Pages/Sponsors.html">Sponsers</a></li>
-          <li><a href="./Pages/Calendar.html">Calender</a></li>
+          <li><a href="../Pages/OurTeam.html">Our Team</a></li>
+          <li><a href="../Pages/About.html">About</a></li>
+          <li><a href="../Pages/Sponsors.html">Sponsers</a></li>
+          <li><a href="../Pages/Calendar.html">Calender</a></li>
           <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
         </ul>
       </nav>
