--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
       <nav>
         <ul>
-          <li><a href="./Pages/OurTeam.html">Our Team</a></li>
-          <li><a href="./Pages/About.html">About</a></li>
-          <li><a href="./Pages/Sponsors.html">Sponsers</a></li>
-          <li><a href="./Pages/Calendar.html">Calender</a></li>
+          <li><a href="../Pages/OurTeam.html">Our Team</a></li>
+          <li><a href="../Pages/About.html">About</a></li>
+          <li><a href="../Pages/Sponsors.html">Sponsers</a></li>
+          <li><a href="../Pages/Calendar.html">Calender</a></li>
           <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
         </ul>
       </nav>
