Change logo to a better one, will fix header later

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <a href="index.html">
 
-          <img src="images/nexgenLogo.jpg" alt="NexGen Logo" class="logo">
+          <img src="images/nexgenLogo1.jpg" alt="NexGen Logo" class="logo">
 
         </a>
 
