--- a/Pages/OurTeam.html
+++ b/Pages/OurTeam.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div class="container">
-			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo.jpg"></a>
+			<a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg"></a>
       <nav>
         <ul>
           <li><a href="../Pages/OurTeam.html">Our Team</a></li>
