Change color from green to DV teal

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>NexGenRobotics</title>
   <link rel="stylesheet" type="text/css" href="index.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  <meta name="theme-color" content="#00f395">
+  <meta name="theme-color" content="#00C9BF">
 
   <!-- GSuite Verification. DO NOT DELETE!!! -->
   <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" />
