Fix sponsors, match youtube aspect ratio

--- a/Pages/OurTeam.html
+++ b/Pages/OurTeam.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="../Pages/OurTeam.html">Our Team</a></li>
           <li><a href="../Pages/About.html">About</a></li>
-          <li><a href="../Pages/Sponsors.html">Sponsers</a></li>
+          <li><a href="../Pages/Sponsors.html">Sponsors</a></li>
           <li><a href="../Pages/Calendar.html">Calender</a></li>
           <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
         </ul>
@@ -22,7 +22,12 @@
 		</div>
 	</header>
 	<div class="top">
-		<img src="../images/OurTeam.jpg"><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+		<img height="450" src="../images/OurTeam.jpg"><br>
 		<br>
 		<br>
 		<table align="center" border="0" cellpadding="1" cellspacing="10" width="80%">
