--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
           <li><a href="../Pages/OurTeam.html">Our Team</a></li>
           <li><a href="../Pages/About.html">About</a></li>
-          <li><a href="../Pages/Sponsors.html">Sponsers</a></li>
+          <li><a href="../Pages/Sponsors.html">Sponsors</a></li>
           <li><a href="../Pages/Calendar.html">Calender</a></li>
           <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
         </ul>
@@ -38,7 +38,7 @@
 
   <div class="top">
 
-    <iframe width="100%" height="700" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+    <iframe width="800" height="450" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media"></iframe>
 
     <h1>"I can either watch it happen or be a part of it." -Elon Musk</h1>
     <br>
