Working on Slideshow functionality; Team description fixes; Added external Slideshow.js file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
           <img src="images/nexgenLogo1.jpg" alt="NexGen Logo" class="logo">
 
-        </a>
+      </a>
 
       <nav>
         <ul>
@@ -38,8 +38,17 @@
 
   <div class="top">
 
-    <iframe width="800" height="450" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+    <div class="slideshow">
+      <img src="images/Article.jpg" class="fade">
+      <img src="images/OurTeam.jpg" class="fade">
+    </div>
 
+    <script src="Slideshow.js"></script>
+    
+    <!--
+    <iframe width="800" height="450" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+    -->
+    
     <h1>"I can either watch it happen or be a part of it." -Elon Musk</h1>
     <br>
     <table border="0" style="text-align:justify" width="95%" align="center">
@@ -47,9 +56,11 @@
         <td>
           <h3>
             We are a Deer Valley High School club dedicated to exposing students to the glorious world of robotics.
-            students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the First Robotics Competition held at UC Davis at the end of the year.
+            Students get the opportunity to learn about teamwork, programming, design, and handiwork while preparing for the
+	    <a href="https://www.firstinspires.org/robotics/frc">First Robotics Competition</a>
+	    held at UC Davis at the end of the year.
             Through our club, students are also introduced to possible career choices in STEM, such as computer science and engineering.
-            We will work our absolute best to am climb the ranks in the UC Davis competition and competitions in the future.
+            We will put our absolute best effort into climbing the ranks in the UC Davis competition and other competitions in the future.
             NexGen will strive for success and NexGen will work to be the best of the Next Generation.
           </h3>
         </td>
