Cleanup index code

--- a/index.html
+++ b/index.html
@@ -13,16 +13,9 @@
 </head>
 
 <body>
-
   <header>
     <div class="container">
-
-      <a href="index.html">
-
-          <img src="images/nexgenLogo1.jpg" alt="NexGen Logo" class="logo">
-
-        </a>
-
+      <a href="../index.html"><img alt="NexGen Logo" class="logo" src="../images/nexgenLogo1.jpg"></a>
       <nav>
         <ul>
           <li><a href="../Pages/OurTeam.html">Our Team</a></li>
@@ -32,7 +25,6 @@
           <li><a href="https://www.gofundme.com/nexgen-robotics">Donate</a></li>
         </ul>
       </nav>
-
     </div>
   </header>
 
