--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   <div class="top">
 
     <div class="slideshow">
-      <img src="images/Article.jpg" class="fade">
+      <a href="#" style="width:inherit;height:inherit;">
+	<img src="images/Article.jpg" class="fade">
+      </a>
       <img src="images/OurTeam.jpg" class="fade">
     </div>
-
-    <script src="Slideshow.js"></script>
     
     <!--
     <iframe width="800" height="450" src="https://www.youtube.com/embed/HZbdwYiCY74" frameborder="0" allow="autoplay; encrypted-media"></iframe>
@@ -68,6 +68,9 @@
     </table>
 
   </div>
+
+  <script src="Slideshow.js"></script>
+  
 </body>
 
 </html>
